--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% assign pageTitle = page.title | default: site.name ~ ' ' ~ site.project.version | escape %}
     {% assign pageDescription = page.description | page.excerpt | default: site.description %}
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>{{ pageTitle | strip_html |  escape }}</title>
     <meta name="description" content="{{ pageDescription | strip_html | normalize_whitespace | truncate: 160 | escape }}">
         
