--- a/res/css/style.css
+++ b/res/css/style.css
@@ -7,12 +7,13 @@
     card {
       border: 1px solid #ddd;
       border-radius: 10px;
-      padding: 20px;
+      padding: 20px !important;
       margin-bottom: 20px;
       margin-left: 5px;
       margin-right: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       min-height:100px;
+     border-left: 15px #fede02 solid;
     }
 
    .title{
