--- a/res/css/style.css
+++ b/res/css/style.css
@@ -4,7 +4,7 @@
       margin: 0;
     }
     
-    card {
+    sampleCard {
       border: 1px solid #ddd;
       border-radius: 10px;
       padding: 20px !important;
