--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/res/css/style.css" >
+    <link rel="stylesheet" href="https://scribbler.live/assets/css/main.css">
     {% assign pageTitle = page.title | default: site.name ~ ' ' ~ site.project.version | escape %}
     {% assign pageDescription = page.description | page.excerpt | default: site.description %}
     
