--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,21 +87,16 @@
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
                         <h1 class="wow fadeInLeft" data-wow-delay=".4s">{{ pageTitle | strip_html |  escape }}</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">Simple Interface for Experimenting in JavaScript. Developed for Open Source using Open Source.</p>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s">Sample Scribbler notebooks for Experimenting in JavaScript.</p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
                             <a href="https://app.scribbler.live" target="_blank"  class="btn"><i class="lni lni-play"></i>Start (No Login)</a>
                             <a href="https://github.com/gopi-suvanam/scribbler" target="_blank" class="btn btn-alt"><i class="lni lni-github-original"></i><i class="lni lni-star-filled"></i>on Github</a>
                         </div>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s"><strong>Learning • Scientific computation • AI/ML  </strong></p>
-                        <p>Happy experimenting!</p>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s"><strong>Learning • Testing • Scientific computation • AI/ML </strong></p>
                         
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12 col-12">
-                    <div class="hero-image wow fadeInRight" style="text-align:center" data-wow-delay=".4s">
-                        <img style="width:40%;margin:auto" src="assets/images/hero/phone.png" alt="#">
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
